@@ -28,14 +28,10 @@ package sun.management;
 import java.lang.management.ManagementFactory;
 import java.lang.management.ThreadInfo;
 import java.lang.management.ThreadMXBean;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
 import java.util.stream.Stream;
-import java.security.AccessController;
-import java.security.PrivilegedActionException;
-import java.security.PrivilegedExceptionAction;
 import javax.management.ObjectName;
 import java.util.Objects;
+import sun.management.Util;
 
 /**
  * Implementation for java.lang.management.ThreadMXBean as well as providing the
@@ -134,31 +130,24 @@ public class ThreadImpl implements ThreadMXBean {
     @Override
     public long[] getAllThreadIds() {
         Util.checkMonitorAccess();
-
         Thread[] threads = getThreads();
-        int length = threads.length;
-        long[] ids = new long[length];
-        for (int i = 0; i < length; i++) {
-            Thread t = threads[i];
-            ids[i] = t.threadId();
-        }
-        return ids;
+        return platformThreadIds(threads);
     }
 
     @Override
     public ThreadInfo getThreadInfo(long id) {
-        long[] ids = new long[1];
-        ids[0] = id;
-        final ThreadInfo[] infos = getThreadInfo(ids, 0);
-        return infos[0];
+        return getThreadInfo(id, 0);
     }
 
     @Override
     public ThreadInfo getThreadInfo(long id, int maxDepth) {
-        long[] ids = new long[1];
-        ids[0] = id;
-        final ThreadInfo[] infos = getThreadInfo(ids, maxDepth);
-        return infos[0];
+        long[] ids = new long[] { id };
+        ThreadInfo ti = getThreadInfo(ids, maxDepth)[0];
+        if (ti == null || Util.isVirtual(ti)) {
+            return null;
+        } else {
+            return ti;
+        }
     }
 
     @Override
@@ -202,6 +191,7 @@ public class ThreadImpl implements ThreadMXBean {
         } else {
             getThreadInfo1(ids, maxDepth, infos);
         }
+        nullVirtualThreads(infos);
         return infos;
     }
 
@@ -232,7 +222,7 @@ public class ThreadImpl implements ThreadMXBean {
 
     private boolean verifyCurrentThreadCpuTime() {
         // check if Thread CPU time measurement is supported.
-        if (isVirtual(Thread.currentThread())) {
+        if (Util.isVirtual(Thread.currentThread())) {
             throw new UnsupportedOperationException("Not supported by virtual threads");
         }
         if (!isCurrentThreadCpuTimeSupported()) {
@@ -294,7 +284,7 @@ public class ThreadImpl implements ThreadMXBean {
                 long id = ids[0];
                 Thread thread = Thread.currentThread();
                 if (id == thread.threadId()) {
-                    if (isVirtual(thread)) {
+                    if (Util.isVirtual(thread)) {
                         times[0] = -1;
                     } else {
                         times[0] = getThreadTotalCpuTime0(0);
@@ -337,7 +327,7 @@ public class ThreadImpl implements ThreadMXBean {
                 long id = ids[0];
                 Thread thread = Thread.currentThread();
                 if (id == thread.threadId()) {
-                    if (isVirtual(thread)) {
+                    if (Util.isVirtual(thread)) {
                         times[0] = -1;
                     } else {
                         times[0] = getThreadUserCpuTime0(0);
@@ -371,7 +361,7 @@ public class ThreadImpl implements ThreadMXBean {
     }
 
     protected long getCurrentThreadAllocatedBytes() {
-        if (isThreadAllocatedMemoryEnabled() && !isVirtual(Thread.currentThread())) {
+        if (isThreadAllocatedMemoryEnabled() && !Util.isVirtual(Thread.currentThread())) {
             return getThreadAllocatedMemory0(0);
         }
         return -1;
@@ -387,7 +377,7 @@ public class ThreadImpl implements ThreadMXBean {
         if (verified) {
             Thread thread = Thread.currentThread();
             if (id == thread.threadId()) {
-                if (isVirtual(thread)) {
+                if (Util.isVirtual(thread)) {
                     return -1L;
                 } else {
                     return getThreadAllocatedMemory0(0);
@@ -443,9 +433,7 @@ public class ThreadImpl implements ThreadMXBean {
      */
     private long[] threadsToIds(Thread[] threads) {
         if (threads != null) {
-            long[] tids = Stream.of(threads)
-                    .mapToLong(Thread::threadId)
-                    .toArray();
+            long[] tids = platformThreadIds(threads);
             if (tids.length > 0) {
                 return tids;
             }
@@ -509,8 +497,10 @@ public class ThreadImpl implements ThreadMXBean {
     public ThreadInfo[] getThreadInfo(long[] ids,
                                       boolean lockedMonitors,
                                       boolean lockedSynchronizers) {
-        return dumpThreads0(ids, lockedMonitors, lockedSynchronizers,
-                            Integer.MAX_VALUE);
+        ThreadInfo[] infos = dumpThreads0(ids, lockedMonitors, lockedSynchronizers,
+                                          Integer.MAX_VALUE);
+        nullVirtualThreads(infos);
+        return infos;
     }
 
     public ThreadInfo[] getThreadInfo(long[] ids,
@@ -527,14 +517,17 @@ public class ThreadImpl implements ThreadMXBean {
         if (ids.length == 0) return new ThreadInfo[0];
 
         verifyDumpThreads(lockedMonitors, lockedSynchronizers);
-        return dumpThreads0(ids, lockedMonitors, lockedSynchronizers, maxDepth);
+        ThreadInfo[] infos = dumpThreads0(ids, lockedMonitors, lockedSynchronizers, maxDepth);
+        nullVirtualThreads(infos);
+        return infos;
     }
 
     @Override
     public ThreadInfo[] dumpAllThreads(boolean lockedMonitors,
                                        boolean lockedSynchronizers) {
-        return dumpAllThreads(lockedMonitors, lockedSynchronizers,
-                              Integer.MAX_VALUE);
+        ThreadInfo[] infos = dumpAllThreads(lockedMonitors, lockedSynchronizers,
+                                            Integer.MAX_VALUE);
+        return platformThreads(infos);
     }
 
     public ThreadInfo[] dumpAllThreads(boolean lockedMonitors,
@@ -545,7 +538,8 @@ public class ThreadImpl implements ThreadMXBean {
                     "Invalid maxDepth parameter: " + maxDepth);
         }
         verifyDumpThreads(lockedMonitors, lockedSynchronizers);
-        return dumpThreads0(null, lockedMonitors, lockedSynchronizers, maxDepth);
+        ThreadInfo[] infos = dumpThreads0(null, lockedMonitors, lockedSynchronizers, maxDepth);
+        return platformThreads(infos);
     }
 
     // VM support where maxDepth == -1 to request entire stack dump
@@ -579,29 +573,34 @@ public class ThreadImpl implements ThreadMXBean {
     }
 
     /**
-     * Returns true if the given Thread is a virutal thread.
-     *
-     * @implNote This method uses reflection because Thread::isVirtual is a preview API
-     * and the java.management cannot be compiled with --enable-preview.
+     * Returns the thread identifiers of the platform threads in the given array.
      */
-    private static boolean isVirtual(Thread thread) {
-        try {
-            return (boolean) IS_VIRTUAL.invoke(thread);
-        } catch (IllegalAccessException | InvocationTargetException e) {
-            throw new InternalError(e);
-        }
+    private static long[] platformThreadIds(Thread[] threads) {
+        return Stream.of(threads)
+                .filter(t -> !Util.isVirtual(t))
+                .mapToLong(Thread::threadId)
+                .toArray();
     }
 
-    static final Method IS_VIRTUAL;
-    static {
-        try {
-            PrivilegedExceptionAction<Method> pa = () -> Thread.class.getMethod("isVirtual");
-            @SuppressWarnings("removal")
-            Method m = AccessController.doPrivileged(pa);
-            IS_VIRTUAL = m;
-        } catch (PrivilegedActionException e) {
-            throw new InternalError(e);
-        }
+    /**
+     * Returns the ThreadInfo objects from the given array that correspond to platform
+     * threads.
+     */
+    private ThreadInfo[] platformThreads(ThreadInfo[] infos) {
+        return Stream.of(infos)
+                .filter(ti -> !Util.isVirtual(ti))
+                .toArray(ThreadInfo[]::new);
+    }
 
+    /**
+     * Set the elements of the given array to null if they correspond to a virtual thread.
+     */
+    private static void nullVirtualThreads(ThreadInfo[] infos) {
+        for (int i = 0; i < infos.length; i++) {
+            ThreadInfo ti = infos[i];
+            if (ti != null && Util.isVirtual(ti)) {
+                infos[i] = null;
+            }
+        }
     }
 }
